--- a/container-build/Containerfile
+++ b/container-build/Containerfile
@@ -1,2 +1,17 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
+
+EXPOSE 8080
+
+LABEL io.k8s.description="A description" \
+      io.k8s.display-name="A display name" \
+      io.openshift.expose-services="8080:http" \
+      io.openshift.tags="httpd, apache"
+
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf
+RUN sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g" /etc/httpd/conf/httpd.conf
+
+RUN chgrp -R 0 /var/run/httpd /var/log/httpd && \
+    chmod g=u /var/run/httpd /var/log/httpd
+
+USER 1001
