--- a/container-build/Containerfile
+++ b/container-build/Containerfile
@@ -1,2 +1,14 @@
 # Use the httpd-parent image as base
 FROM quay.io/an880059/httpd-parent
+
+LABEL io.openshift.expose-services="8080:http"
+
+
+RUN sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/" /etc/httpd/conf/httpd.conf && \
+    sed -i "s/Listen 80/Listen 8080/" /etc/httpd/conf/httpd.conf && \
+    chgrp -R 0 /var/log/httpd /var/run/httpd && \
+    chmod -R g=u /var/log/httpd /var/run/httpd
+
+USER 1001
+
+EXPOSE 8080
