--- a/container-build/Containerfile
+++ b/container-build/Containerfile
@@ -1,2 +1,15 @@
 # Use the httpd-parent image as base
-FROM quay.io/redhattraining/httpd-parent
+#FROM quay.io/redhattraining/httpd-parent
+FROM quay.io/an880059/httpd-parent
+
+LABEL io.openshift.expose-services="8080:http" \
+      io.openshift.tags="http,apache"
+
+EXPOSE 8080
+
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf && \
+    sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g" /etc/httpd/conf/httpd.conf && \
+    chgrp -R 0 /var/run/httpd /var/log/httpd && \
+    chmod -R u=g /var/run/httpd /var/log/httpd
+
+USER 1001
