--- a/container-build/Containerfile
+++ b/container-build/Containerfile
@@ -10,6 +10,6 @@ EXPOSE 8080
 RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf && \
     sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g" /etc/httpd/conf/httpd.conf && \
     chgrp -R 0 /var/run/httpd /var/log/httpd && \
-    chmod -R u=g /var/run/httpd /var/log/httpd
+    chmod -R g=u /var/run/httpd /var/log/httpd
 
 USER 1001
